FT2-256: Update the PR reviews. Description: - Remove extra spaces from routing.yml file. - Make the parameter accessible by controller for the string also.

--- a/web/modules/custom/mymodule/mymodule.routing.yml
+++ b/web/modules/custom/mymodule/mymodule.routing.yml
@@ -7,9 +7,8 @@ mymodule.simplecontent:
     _role: administrator+content_editor
     _permission: 'access custom permission'
 
-
 mymodule.parameterContent:
-  path: '/mymodule/{id}'
+  path: '/mymodule/{param}'
   defaults:
     _controller: '\Drupal\mymodule\Controller\MyModuleController::parameterContent'
     _title: 'My module parameter Content'
