--- a/web/modules/custom/hello_world/hello_world.routing.yml
+++ b/web/modules/custom/hello_world/hello_world.routing.yml
@@ -4,4 +4,5 @@ hello_world_route:
     _controller: '\Drupal\hello_world\Controller\ShowTextController::showText'
     _title: 'Show hello world'
   requirements:
-    _permission: 'access content'
+    _permission: hello_world.custom_permission
+
