FT2-281: Update the code & add correct the taxonomy term form.

--- a/web/modules/custom/custom_event_dashboard/custom_event_dashboard.routing.yml
+++ b/web/modules/custom/custom_event_dashboard/custom_event_dashboard.routing.yml
@@ -4,7 +4,7 @@ custom_event_dashboard.dashboard:
     _controller: '\Drupal\custom_event_dashboard\Controller\CustomEventDashboardController::build'
     _title: 'Custom event dashboard'
   requirements:
-    _permission: 'Access content'
+    _permission: 'access content'
 
 custom_event_dashboard.taxonomy_refered:
   path: '/custom-term-refered'
